change #container height to min-height to fix spacing related to fixed footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,7 @@ header img {
   float: left;
 }
 #container {
-  height: 100%;
+  min-height: 100%;
   padding-bottom: 45px;
   overflow: auto;
   background: #c6977a url('../images//village.jpg');
